--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "express": "^4.21.0",
     "method-override": "^3.0.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "nodemon": "^3.1.4"
   }
 }
