--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
@@ -18,5 +17,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "nodemon": "^3.1.4"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
